# notepadqq

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .qmake.stash  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  Makefile.am  PACKAGING.md  README.md  Vagrantfile  autogen.sh  ax_cxx_compile_stdcxx_0x.m4  ax_have_qt.m4  build-appimage.sh  build.Dockerfile  cmake_uninstall.cmake.in  configure  configure-auto  configure.ac  fix-tab.diff  install_notepadqq.sh  install_prereqs.sh  notepadqq.pro  notepadqq.spec  package-lock.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
src/: TODO  (+37 more)
src/translations/: CMakeLists.txt  notepadqq_cs.ts  notepadqq_de.ts  notepadqq_es.ts  notepadqq_fr.ts  notepadqq_hu.ts  notepadqq_it.ts  notepadqq_ja.ts  notepadqq_nl.ts  notepadqq_pl.ts  notepadqq_pt.ts  notepadqq_pt_br.ts  notepadqq_ru.ts  notepadqq_sl.ts  notepadqq_sv.ts  notepadqq_tr.ts  notepadqq_uk.ts  notepadqq_zh.ts
src/ui/: CMakeLists.txt  LICENSE-3RD-PARTY.txt  clickablelabel.cpp  customqwebview.cpp  docengine.cpp  editor.cpp  editortabwidget.cpp  extension.cpp  filesearchresultswidget.cpp  filesystemwatcher.cpp  frmabout.cpp  frmabout.ui  frmcolumneditor.cpp  frmcolumneditor.ui  frmencodingchooser.cpp  frmencodingchooser.ui  frmindentationmode.cpp  frmindentationmode.ui  frmlinenumberchooser.cpp  frmlinenumberchooser.ui  frmpreferences.cpp  frmpreferences.ui  frmsearchlanguage.cpp  frmsearchlanguage.ui  frmsearchreplace.cpp  frmsearchreplace.ui  globals.cpp  iconprovider.cpp  keygrabber.cpp  languages.cpp  localcommunication.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  notepadqq.cpp  notepadqq.pro  nqqrun.cpp  nqqsettings.cpp  nqqtab.cpp  qextendediconengine.cpp  (+9 more)
src/ui/EditorNS/: bannerbasicmessage.cpp  bannerfilechanged.cpp  bannerfileremoved.cpp  bannerindentationdetected.cpp  customqwebview.cpp  editor.cpp  jsproxy.cpp  languagecache.cpp  languageservice.cpp
src/ui/Extensions/: extension.cpp  extensionloader.cpp  extensionsapi.cpp  extensionsloader.cpp  extensionsserver.cpp  installextension.cpp  installextension.ui  runtimesupport.cpp
src/ui/Extensions/Stubs/: editorstub.cpp  menuitemstub.cpp  notepadqq_stub.cpp  notepadqqstub.cpp  stub.cpp  windowstub.cpp
src/ui/Search/: advancedsearchdock.cpp  dlgsearching.cpp  dlgsearching.ui  filereplacer.cpp  filesearcher.cpp  filesearchresultswidget.cpp  frmsearchreplace.cpp  frmsearchreplace.ui  replaceinfilesworker.cpp  replaceworker.cpp  searchinfilesworker.cpp  searchinstance.cpp  searchobjects.cpp  searchresultsitemdelegate.cpp  searchstring.cpp  searchworker.cpp  treeviewhtmldelegate.cpp
src/ui/Sessions/: autosave.cpp  backupservice.cpp  persistentcache.cpp  sessions.cpp
src/ui/icons/default/: index.theme
src/ui/icons/notepadqq/: index.theme
src/ui/include/: clickablelabel.h  constants.h  customqwebview.h  docengine.h  editor.h  editortabwidget.h  extension.h  filesearchresult.h  filesearchresultswidget.h  frmabout.h  frmcolumneditor.h  frmencodingchooser.h  frmindentationmode.h  frmlinenumberchooser.h  frmpreferences.h  frmsearchlanguage.h  frmsearchreplace.h  globals.h  iconprovider.h  keygrabber.h  languages.h  localcommunication.h  mainwindow.h  notepadqq.h  nqqrun.h  nqqsettings.h  nqqtab.h  promise.h  qextendediconengine.h  runpreferences.h  searchinfilesworker.h  singleapplication.h  stats.h  svgiconengine.h  topeditorcontainer.h  treeviewhtmldelegate.h
src/ui/include/EditorNS/: bannerbasicmessage.h  bannerfilechanged.h  bannerfileremoved.h  bannerindentationdetected.h  customqwebview.h  editor.h  editor_properties.h  jsproxy.h  languagecache.h  languageservice.h
src/ui/include/Extensions/: extension.h  extensionloader.h  extensionsapi.h  extensionsloader.h  extensionsserver.h  installextension.h  runtimesupport.h
src/ui/include/Extensions/Stubs/: editor.h  editorstub.h  menuitemstub.h  notepadqq_stub.h  notepadqqstub.h  stub.h  windowstub.h
src/ui/include/Search/: advancedsearchdock.h  dlgsearching.h  filereplacer.h  filesearcher.h  filesearchresult.h  filesearchresultswidget.h  frmsearchreplace.h  replaceinfilesworker.h  replaceworker.h  searchhelpers.h  searchinfilesworker.h  searchinstance.h  searchobjects.h  searchresultsitemdelegate.h  searchstring.h  searchworker.h
src/ui/include/Sessions/: autosave.cpp  autosave.h  backupservice.h  persistentcache.h  sessions.h
src/ui/libs/qtpromise/: .appveyor.yml  .clang-format  .gitignore  .remarkrc.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  book.json  package-lock.json  package.json  qpm.json  qtpromise.pri  qtpromise.pro
src/ui/libs/qtpromise/cmake/: QtPromiseAddTest.cmake
src/ui/libs/qtpromise/docs/: README.md  SUMMARY.md
src/ui/libs/qtpromise/docs/.vuepress/: config.js  override.styl  style.styl
src/ui/libs/qtpromise/docs/.vuepress/styles/: index.styl
src/ui/libs/qtpromise/docs/qtpromise/: api-reference.md  getting-started.md  qtconcurrent.md  qtsignals.md  thread-safety.md
src/ui/libs/qtpromise/docs/qtpromise/exceptions/: canceled.md  context.md  conversion.md  timeout.md  undefined.md
src/ui/libs/qtpromise/docs/qtpromise/helpers/: all.md  attempt.md  connect.md  each.md  filter.md  map.md  qpromise.md  qpromiseall.md  reduce.md  resolve.md
src/ui/libs/qtpromise/docs/qtpromise/qpromise/: all.md  constructor.md  convert.md  delay.md  each.md  fail.md  filter.md  finally.md  isfulfilled.md  ispending.md  isrejected.md  map.md  reduce.md  reject.md  resolve.md  tap.md  tapfail.md  then.md  timeout.md  wait.md
src/ui/libs/qtpromise/include/: QtPromise
src/ui/libs/qtpromise/package/features/: qtpromise.prf
src/ui/libs/qtpromise/src/: src.pro
src/ui/libs/qtpromise/src/qtpromise/: qpromise.h  qpromise.inl  qpromise_p.h  qpromiseconnections.h  qpromiseerror.h  qpromiseexceptions.h  qpromisefuture.h  qpromiseglobal.h  qpromisehelpers.h  qpromisehelpers_p.h  qpromiseresolver.h  qtpromise.pri  qtpromise.pro
src/ui/libs/qtpromise/tests/: CMakeLists.txt  tests.pro
src/ui/libs/qtpromise/tests/auto/: CMakeLists.txt  auto.pro
(+289 files in other folders)
